--- a/index.html
+++ b/index.html
@@ -42,18 +42,16 @@
                     <source src="music/track2.mp3" type="audio/mpeg">
                 </audio>
             </div>
-            <!-- Добавляйте новые альбомы по аналогии -->
         </div>
     </section>
 
-    <!-- Галерея / нейро-арт -->
+    <!-- Галерея -->
     <section id="gallery" class="section gallery-section">
         <h2>Галерея</h2>
         <div class="mini-albums">
             <img src="gallery/art1.jpg" alt="Арт 1">
             <img src="gallery/art2.jpg" alt="Арт 2">
             <img src="gallery/art3.jpg" alt="Арт 3">
-            <!-- Добавляйте новые изображения -->
         </div>
     </section>
 
