--- a/index.html
+++ b/index.html
@@ -8,10 +8,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!-- Канвас для живого фона -->
     <canvas id="scene-canvas"></canvas>
 
-    <!-- Навигация -->
     <nav id="main-nav">
         <ul>
             <li><a href="#home">Главная</a></li>
@@ -20,22 +18,20 @@
         </ul>
     </nav>
 
-    <!-- Главная секция -->
     <section id="home" class="section home-section">
         <h1 class="band-title">Увертюра Иордан</h1>
         <p class="band-tagline">Психоделический рок / регги</p>
         <button class="btn-scroll" onclick="document.getElementById('albums').scrollIntoView({behavior:'smooth'})">Альбомы</button>
     </section>
 
-    <!-- Альбомы -->
     <section id="albums" class="section">
         <h2>Альбомы</h2>
         <div class="albums-container">
             <div class="album-card">
-                <img src="albums/album1.jpg" alt="Альбом 1">
+                <img src="assets/albums/album1.jpg" alt="Альбом 1">
                 <h3>ПсихоСфера</h3>
                 <audio controls>
-                    <source src="albums/album1/track1.mp3" type="audio/mpeg">
+                    <source src="assets/albums/album1/track1.mp3" type="audio/mpeg">
                     Ваш браузер не поддерживает аудио.
                 </audio>
             </div>
@@ -50,17 +46,15 @@
         </div>
     </section>
 
-    <!-- Галерея -->
     <section id="gallery" class="section">
         <h2>Галерея</h2>
         <div class="gallery-container">
-            <img src="gallery/img1.jpg" alt="Галерея 1">
+            <img src="assets/gallery/img1.jpg" alt="Галерея 1">
             <img src="gallery/img2.jpg" alt="Галерея 2">
             <img src="gallery/img3.jpg" alt="Галерея 3">
         </div>
     </section>
 
-    <!-- JS прямо в HTML -->
     <script>
         const canvas = document.getElementById('scene-canvas');
         const ctx = canvas.getContext('2d');
@@ -70,28 +64,29 @@
         const particles = [];
         const colors = ['#ff33cc','#33ccff','#ffcc33','#33ff99','#cc33ff','#ff66ff'];
 
-        for(let i=0;i<200;i++){
+        for(let i=0;i<300;i++){
             particles.push({
                 x: Math.random()*canvas.width,
                 y: Math.random()*canvas.height,
                 radius: Math.random()*3 + 1,
                 color: colors[Math.floor(Math.random()*colors.length)],
-                dx: (Math.random()-0.5)*1.5,
-                dy: (Math.random()-0.5)*1.5
+                dx: (Math.random()-0.5)*2,
+                dy: (Math.random()-0.5)*2
             });
         }
 
         function animate(){
-            ctx.fillStyle = 'rgba(0,0,0,0.1)';
+            ctx.fillStyle = 'rgba(0,0,0,0.08)';
             ctx.fillRect(0,0,canvas.width,canvas.height);
             particles.forEach(p => {
                 ctx.beginPath();
                 ctx.arc(p.x,p.y,p.radius,0,Math.PI*2);
                 ctx.fillStyle = p.color;
+                ctx.shadowBlur = 10;
+                ctx.shadowColor = p.color;
                 ctx.fill();
                 p.x += p.dx;
                 p.y += p.dy;
-
                 if(p.x<0||p.x>canvas.width)p.dx*=-1;
                 if(p.y<0||p.y>canvas.height)p.dy*=-1;
             });
